# Nginx-Gunicorn-configuration

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  📊Architecture Diagram
Inventory_Tracking/: __init__.py  admin.py  apps.py  models.py
Inventory_Tracking/migrations/: 0001_initial.py
docker/gunicorn/: gunicorn.conf.py
docker/nginx/: nginx.conf
inventory/: celery.py  settings.py  urls.py  📊Architecture Diagram
