[project]
name = "inventory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.3.0",
    "celery>=5.6.3",
    "celery-starter>=1.0.9",
    "cryptography==44.0.2",
    "django>=6.0.7",
    "django-celery>=3.1.17",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-cors-headers==4.7.0",
    "django-environ==0.12.0",
    "django-extensions>=4.1",
    "django-filter>=26.1",
    "django-redis>=7.0.0",
    "django-silk>=5.5.0",
    "django-storages>=1.14.6",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt>=5.5.1",
    "eventlet>=0.41.0",
    "flower>=2.0.1",
    "gunicorn==23.0.0",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "pyjwt==2.10.1",
    "python-decouple>=3.8",
    "redis>=8.0.1",
    "uvicorn==0.34.0",
    "whitenoise==6.6.0",
]
